# grand-marathon

./: .gitignore  README.md  docker-compose.yml  instructions.md  pyproject.toml
api/: Dockerfile  main.py  requirements.txt
api/routers/: actions.py  alerts.py  map.py  news.py  reports.py
api/templates/: report_template.html
dashboard/: .env.example  Dockerfile  README.md  package.json
dashboard/src/: app.html
data/: NW_Spain_2025_VIIRS_hotspots.geojson  actions.json  alerts.json  best_lgbm_model.joblib  features.csv  hotspots_buffered.geojson  hotspots_filtered.geojson  news.json  rf_model.joblib  seed_actions.json  seed_alerts.json  test.csv  train.csv
data/aois/: seadur.geojson
data/exposure/: amenities.geojson  amenities_with_risk.geojson  buildings.geojson  buildings_with_risk.geojson  population.tif  roads.geojson  roads_with_risk.geojson
data/final_risk_analytics/: analytics_2025-08-01.json  analytics_2025-08-02.json  analytics_2025-08-03.json  analytics_2025-08-04.json  analytics_2025-08-05.json  analytics_2025-08-06.json  analytics_2025-08-07.json  analytics_2025-08-08.json  analytics_2025-08-09.json  analytics_2025-08-10.json  analytics_2025-08-11.json  analytics_2025-08-12.json  analytics_2025-08-13.json  analytics_2025-08-14.json  analytics_2025-08-15.json  analytics_2025-08-16.json  (+37 more)
model/: .env.example  00_data_exploration.ipynb  01_hazard_model.ipynb  02_hazard_maps.ipynb  04_prepare_exp_vuln.ipynb  05_compute_operational_priority.ipynb  06_exposure_risk.ipynb  README.md  hotspots.ipynb  main.py  risk_priority.py  utils.py
(+153 files in other folders)
