[project]
name = "grand-marathon-mvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "catboost>=1.2.10",
    "contextily>=1.6.2",
    "fastapi>=0.128.8",
    "folium>=0.20.0",
    "geopandas>=1.0.1",
    "jupyter>=1.1.1",
    "leafmap>=0.62.0",
    "lightgbm>=4.6.0",
    "mapclassify>=2.10.0",
    "matplotlib>=3.9.4",
    "odc-stac>=0.3.11",
    "osmnx>=2.1.0",
    "planetary-computer>=1.0.0",
    "rapidfuzz>=3.14.5",
    "rioxarray>=0.15.0",
    "scikit-learn>=1.8.0",
    "spai==2026.05.21.dev0",
    "unidecode>=1.4.0",
    "uvicorn>=0.39.0",
    "weasyprint>=68.1",
    "xarray>=2024.7.0",
    "xgboost>=3.2.0",
    "zarr>=3.2.1",
]
